--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,6 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "nodemon src/server.js"
-    
   },
   "type": "module",
   "keywords": [],
@@ -14,6 +13,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongodb": "^7.0.0",
     "mongoose": "^9.1.5",
     "nodemon": "^3.1.11"
   }
