--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "inngest": "^3.44.3",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.5",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "stream-chat": "^9.24.0"
   }
 }
