--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.59.6",
     "@monaco-editor/react": "^4.7.0",
+    "@stream-io/video-react-sdk": "^1.24.0",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
@@ -23,6 +24,8 @@
     "react-resizable-panels": "^3.0.6",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.13.0",
+    "stream-chat": "^9.23.0",
+    "stream-chat-react": "^13.9.0",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
